dark mode location features fix

--- a/eco_project/static/css/styleAll.css
+++ b/eco_project/static/css/styleAll.css
@@ -333,7 +333,7 @@ main.container {
     --btn-green: #30c46e;
     --btn-green-hover: #1a673a;
     --footer-color: #f5f5f5;
-    --feature-color: #cccccc;
+    --feature-color: #ffffff;
     --correct-color: #106724;
     --incorrect-color: #6a0e0e;
 }
